--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>MAT520:Stochastic Differential Equation</title>
+  <title>SWUFE MAT520:Stochastic Differential Equation</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -66,18 +66,13 @@
     </div>
   </nav>
 
-  <!-- Header -->
-<!--  <div id="header" style="text-align:center">-->
-<!--    <a href="http://svl.stanford.edu">-->
-<!--      <img src="img/svl_logo.png" class="logo-left">-->
-<!--    </a>-->
-<!--    <a href="http://stanford.edu/">-->
-<!--      <img src="img/stanfordlogo.jpg" class="logo-right">-->
-<!--    </a>-->
-<!--    <h1>CS231n: Convolutional Neural Networks for Visual Recognition</h1>-->
-<!--    <h3>Stanford - Spring 2021</h3>-->
-<!--    <div style="clear:both;"></div>-->
-<!--  </div>-->
+<!--Header-->
+  <div id="header" style="text-align:center">
+    <h1>MAT520: Stochastic Differential Equation</h1>
+    <h3>Southwestern University of Finance and Economics</h3>
+    <h3>Spring 2021</h3>
+    <div style="clear:both;"></div>
+  </div>
 
 <!--  <div id="teaser">-->
 <!--    <div id="convnetvis"></div>-->
