--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
   <h3>Assignments (20%)</h3>
   <p>See the <a href="assignments.html">Assignment</a> page for details regarding assignments, late days and collaboration policies.</p>
 
-  <h3>Midterm (40%)</h3>
-  <p>Detailed information regarding the midterm will be made available as an announcement on <a href="http://piazza.com/stanford/spring2021/cs231n">Piazza</a> in the coming weeks.</p>
+  <h3>Midterms (40%, 20% each)</h3>
+  <p>Detailed information regarding the midterm see</p>
 
   <h3>Final Project (40%)</h3>
   <p>See the <a href="project.html">Project</a> page for more details regarding the final course project.</p>
