--- a/schedule.html
+++ b/schedule.html
@@ -33,7 +33,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand brand" href="index.html">CS231n Home</a>
+        <a class="navbar-brand brand" href="index.html">Home</a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -46,8 +46,6 @@
           <li><a href="https://cs231n.github.io/"><b>Course Notes</b></a></li>
           <li><a href="index.html#coursework"><b>Coursework</b></a></li>
           <li><a href="schedule.html"><b>Schedule</b></a></li>
-          <li><a href="office_hours.html"><b>Office Hours</b></a></li>
-          <li><a href="https://canvas.stanford.edu/courses/135672/external_tools/3367"><b>Lecture Videos</b></a></li>
         </ul>
       </div>
     </div>
