--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <div class="col-md-2">
     <h3>Instructors</h3>
     <div class="instructor">
-      <a href="https://qwang.swufe.edu.cn" target="_blank">
+      <a href="https://qwang.cai.swufe.edu.cn" target="_blank">
         <div class="instructorphoto">
           <img class="img-hover" src="img/qwang.jpg">
         </div>
