--- a/schedule.html
+++ b/schedule.html
@@ -90,18 +90,18 @@
 
   <!-- Lecture 1 -->
   <tr>
-    <td>03/30</td>
+    <td>03/11</td>
     <td>
       <b>Lecture 1: Introduction</b> <br>
-      Computer vision overview <br>
-      Historical context <br>
-      Course logistics <br>
+      Course overview <br>
+      Stochastic: sequential and random <br>
 	[<a href="slides/2021/lecture_1.pdf" target="_blank">slides 1</a>]
 	[<a href="slides/2021/lecture_1_feifei.pdf" target="_blank">slides 2</a>]
     </td>
     <td>
     </td>
     <td>
+      [<a href="homeworks/2021/homework1.pdf" target="_blank">homework1</a>
     </td>
     <td>
     </td>
