--- a/schedule.html
+++ b/schedule.html
@@ -101,7 +101,7 @@
     <td>
     </td>
     <td>
-      [<a href="homeworks/2021/homework1.pdf" target="_blank">homework1</a>
+      [<a href="homeworks/2021/homework1.pdf" target="_blank">homework1</a>]
     </td>
     <td>
     </td>
