--- a/schedule.html
+++ b/schedule.html
@@ -101,7 +101,7 @@
     <td>
     </td>
     <td>
-      [<a href="homeworks/2021/homework1.pdf" target="_blank">homework1</a>]
+      [<a href="homeworks/homework1.pdf" target="_blank">homework1</a>]
     </td>
     <td>
     </td>
@@ -122,6 +122,7 @@
 	<a href="https://cs231n.github.io/linear-classify/" target="_blank">Linear Classification</a>
     </td>
     <td>
+      [<a href="homeworks/homework1.pdf" target="_blank">homework1</a>]
     </td>
     <td>
     </td>
