--- a/schedule.html
+++ b/schedule.html
@@ -95,13 +95,10 @@
       <b>Lecture 1: Introduction</b> <br>
       Course overview <br>
       Stochastic: sequential and random <br>
-	[<a href="slides/2021/lecture_1.pdf" target="_blank">slides 1</a>]
-	[<a href="slides/2021/lecture_1_feifei.pdf" target="_blank">slides 2</a>]
     </td>
     <td>
     </td>
     <td>
-      [<a href="homeworks/homework1.pdf" target="_blank">homework1</a>]
     </td>
     <td>
     </td>
@@ -109,22 +106,22 @@
 
   <!-- Lecture 2 -->
   <tr>
-    <td>04/01</td>
+    <td>03/18</td>
     <td>
-      <b>Lecture 2: Image Classification</b> <br>
-      The data-driven approach <br>
-      K-nearest neighbor <br>
-      Linear classification I <br>
-	[<a href="slides/2021/lecture_2.pdf">slides</a>]
+      <b>Lecture 2: More on Probability Theory</b> <br>
+      Sigma-algebra <br>
+      Expectation and Variance <br>
+      Jensen's Inequality <br>
     </td>
     <td>
 	<a href="https://cs231n.github.io/classification/" target="_blank">Image Classification Problem</a><br>
 	<a href="https://cs231n.github.io/linear-classify/" target="_blank">Linear Classification</a>
     </td>
     <td>
-      [<a href="homeworks/homework1.pdf" target="_blank">homework1</a>]
+      [<a href="homeworks/hw1.pdf" target="_blank">homework1</a>]
     </td>
     <td>
+      <font color="red">Due</font> Mar 25
     </td>
   </tr>
 
