--- a/schedule.html
+++ b/schedule.html
@@ -110,8 +110,8 @@
     <td>
       <b>Lecture 2: More on Probability Theory</b> <br>
       Sigma-algebra <br>
-      Expectation and Variance <br>
-      Jensen's Inequality <br>
+      Expectation and variance <br>
+      Jensen's inequality <br>
     </td>
     <td>
 	<a href="https://cs231n.github.io/classification/" target="_blank">Image Classification Problem</a><br>
@@ -125,45 +125,23 @@
     </td>
   </tr>
 
-  <!-- Discussion 1 -->
-  <tr class='info'>
-    <td>04/02</td>
-    <td>
-      Python / Numpy Review Session
-      <br>
-      [<a href="https://colab.research.google.com/github/cs231n/cs231n.github.io/blob/master/python-colab.ipynb">Colab</a>]
-      [<a href="https://cs231n.github.io/python-numpy-tutorial/">Tutorial</a>]
-    <td>
-      <i class="fa fa-clock-o"></i> 11:30 - 12:30 PM
-    </td>
-    </td>
-    <td>
-      Assignment 1 <b><font color="green">out</font></b>
-      <br>
-      [<a href="https://cs231n.github.io/assignments2021/assignment1/">handout</a>]
-      [<a href="https://cs231n.github.io/assignments/2021/assignment1_colab.zip">colab</a>]
-    </td>
-    <td>
-    </td>
-  </tr>
-
   <!-- Lecture 3 -->
   <tr>
-    <td>04/06</td>
+    <td>03/25</td>
     <td>
-      <b>Lecture 3: Loss Functions and Optimization</b> <br>
-      Linear classification II<br>
-      Higher-level representations, image features<br>
-      Optimization, stochastic gradient descent<br>
-	[<a href="slides/2021/lecture_3.pdf">slides</a>]
-    </td>
-    <td>
-	<a href="https://cs231n.github.io/linear-classify/" target="_blank">Linear Classification</a><br>
-	<a href="https://cs231n.github.io/optimization-1/" target="_blank">Optimization</a><br>
+      <b>Lecture 3: Martingale Theory</b> <br>
+      <br>
+      Stochastic process<br>
+      Martingale<br>
+      Brownian Motion
     </td>
     <td>
     </td>
     <td>
+      [<a href="homeworks/hw2.pdf" target="_blank">homework2</a>]
+    </td>
+    <td>
+      <b><font color="red">Due</font></b> Apr 1
     </td>
   </tr>
 
