--- a/schedule.html
+++ b/schedule.html
@@ -147,64 +147,39 @@
 
   <!-- Lecture 4 -->
   <tr>
-    <td>04/08</td>
+    <td>04/01</td>
     <td>
-      <b>Lecture 4: Neural Networks and Backpropagation</b> <br>
-      Backpropagation<br>
-      Multi-layer Perceptron<br>
-      The neural viewpoint<br>
-	[<a href="slides/2021/lecture_4.pdf">slides</a>]
-    </td>
-    <td>
-      <a href="http://cs231n.github.io/optimization-2">Backprop</a><br>
-      <a href="handouts/linear-backprop.pdf">Linear backprop example</a><br>
-	Suggested Readings:
-	<ol>
-	  <li><a href="https://distill.pub/2017/momentum/">Why Momentum Really Works</a></li>		
-      	  <li><a href="handouts/derivatives.pdf">Derivatives notes</a></li>
-          <li><a href="http://yann.lecun.com/exdb/publis/pdf/lecun-98b.pdf">Efficient backprop</a></li>
-          <li>More backprop references: <a href="http://colah.github.io/posts/2015-08-Backprop/">[1]</a>, <a href="http://neuralnetworksanddeeplearning.com/chap2.html">[2]</a>, <a href="https://www.youtube.com/watch?v=q0pm3BrIUFo">[3]</a></li>
-	</ol>
+      <b>Lecture 4: Modes of Convergence and Inequalities</b> <br>
+      Several modes of convergence (random variables)<br>
+      Chebyshev's Inequality<br>
+      Borel-Cantelli Lemma<br>
     </td>
     <td>
     </td>
     <td>
-    </td>
-  </tr>
-
-  <!-- Discussion 2 -->
-  <tr class='info'>
-    <td>04/09</td>
-    <td>
-      Backprop Review Session
-      <br>
-      [<a href="slides/2021/discussion_2_backprop.pdf">slides</a>]
-    <td>
-      <i class="fa fa-clock-o"></i> 11:30 - 12:30 PM
-    </td>
+      [<a href="homeworks/hw3.pdf" target="_blank">homework3</a>]
     </td>
     <td>
-    </td>
-    <td>
+      <b><font color="red">Due</font></b> Apr 8
     </td>
   </tr>
 
   <!-- Lecture 5 -->
   <tr>
-    <td>04/13</td>
+    <td>04/08</td>
     <td>
-      <b>Lecture 5: Convolutional Neural Networks</b> <br>
-      History<br>
-      Convolution and pooling<br>
-      ConvNets outside vision<br>
-	[<a href="slides/2021/lecture_5.pdf">slides</a>]
-    </td>
-    <td>
-      <a href="http://cs231n.github.io/convolutional-networks">Convolutional Networks</a><br>
+      <b>Lecture 5: Brownian Motion vs. Diffusion</b> <br>
+      Microscopic of diffusion<br>
+      Central Limit Theorem<br>
+      Submartingale properties<br>
     </td>
     <td>
     </td>
     <td>
+      [<a href="homeworks/hw4.pdf" target="_blank">homework4</a>]
+    </td>
+    <td>
+      <b><font color="red">Due</font></b> Apr 15
     </td>
   </tr>
 
