--- a/schedule.html
+++ b/schedule.html
@@ -114,14 +114,12 @@
       Jensen's inequality <br>
     </td>
     <td>
-	<a href="https://cs231n.github.io/classification/" target="_blank">Image Classification Problem</a><br>
-	<a href="https://cs231n.github.io/linear-classify/" target="_blank">Linear Classification</a>
     </td>
     <td>
-      [<a href="homeworks/hw1.pdf" target="_blank">homework1</a>]
+      <a href="homeworks/hw1.pdf" target="_blank">homework1</a>
     </td>
     <td>
-      <font color="red">Due</font> Mar 25
+      <b><font color="red">Due</font></b> Mar 25
     </td>
   </tr>
 
@@ -133,12 +131,12 @@
       <br>
       Stochastic process<br>
       Martingale<br>
-      Brownian Motion
+      Brownian Motion<br>
     </td>
     <td>
     </td>
     <td>
-      [<a href="homeworks/hw2.pdf" target="_blank">homework2</a>]
+      <a href="homeworks/hw2.pdf" target="_blank">homework2</a>
     </td>
     <td>
       <b><font color="red">Due</font></b> Apr 1
@@ -157,7 +155,7 @@
     <td>
     </td>
     <td>
-      [<a href="homeworks/hw3.pdf" target="_blank">homework3</a>]
+      <a href="homeworks/hw3.pdf" target="_blank">homework3</a>
     </td>
     <td>
       <b><font color="red">Due</font></b> Apr 8
@@ -176,7 +174,7 @@
     <td>
     </td>
     <td>
-      [<a href="homeworks/hw4.pdf" target="_blank">homework4</a>]
+      <a href="homeworks/hw4.pdf" target="_blank">homework4</a>
     </td>
     <td>
       <b><font color="red">Due</font></b> Apr 15
@@ -187,40 +185,31 @@
   <tr>
     <td>04/15</td>
     <td>
-      <b>Lecture 6: Deep Learning Hardware and Software</b> <br>
-      CPUs, GPUs, TPUs<br>
-      PyTorch, TensorFlow<br>
-      Dynamic vs Static computation graphs<br>
-	[<a href="slides/2021/lecture_6.pdf">slides</a>]
+      <b>Lecture 6: Property of Brownian Motion</b> <br>
+      Holder continuous<br>
+      Variants of Brownian Motions<br>
+      Quadratic variations<br>
     </td>
     <td>
+      Variants of Brownian Motions
+      <ol>
+        <li>Brownian Scaling</li>
+        <li>Geometric Brownian Motion</li>
+        <li>Integrated Brownian Motion</li>
+        <li>Brownian Bridge</li>
+        <li>Brownian Excursion</li>
+        <li>Fraction Brownian Motion</li>
+        <li>Bessel Process</li>
+      </ol>
     </td>
     <td>
+      <a href="homeworks/hw5.pdf" target="_blank">homework5</a>
     </td>
     <td>
+      <b><font color="red">Due</font></b> Apr 22
     </td>
   </tr>
 
-  <!-- Discussion 3 -->
-  <tr class='info'>
-    <td>04/16</td>
-    <td>
-      Project Overview and Guidelines
-      <br>
-      [<a href="slides/2021/discussion_3_project.pdf">slides</a>]
-    <td>
-      <i class="fa fa-clock-o"></i> 11:30 - 12:30 PM
-    </td>
-    </td>
-    <td>
-      Assignment 2 <b><font color="green">out</font></b><br>
-      [<a href="https://cs231n.github.io/assignments2021/assignment2/">handout</a>]
-      [<a href="https://cs231n.github.io/assignments/2021/assignment2_colab.zip">colab</a>]
-    </td>
-    <td>
-      Assignment 1 <b><font color="red">due</font></b>
-    </td>
-  </tr>
 
   <tr class="warning">
     <td>04/19</td>
