--- a/schedule.html
+++ b/schedule.html
@@ -210,40 +210,32 @@
     </td>
   </tr>
 
-
-  <tr class="warning">
-    <td>04/19</td>
+  <!-- Lecture 7 -->
+  <tr>
+    <td>04/22</td>
     <td>
+      <b>Lecture 7: Stochastic Integral</b> <br>
+      Integral w.r.t to stochastic process<br>
+      Ito integral & Stratonorwich integral<br>
     </td>
     <td>
     </td>
     <td>
+      <a href="homeworks/hw6.pdf" target="_blank">homework6</a>
     </td>
     <td>
-	Project proposal <b><font color="red">due</font></b>
+      <b><font color="red">Due</font></b> Apr 29
     </td>
   </tr>
 
-  <!-- Lecture 7 -->
-  <tr>
-    <td>04/20</td>
+  <tr class="warning">
+    <td>04/29</td>
     <td>
-      <b>Lecture 7: Training Neural Networks, part I</b> <br>
-      Activation functions, data processing<br>
-      Batch Normalization, Transfer learning<br>
-	[<a href="slides/2021/lecture_7.pdf">slides</a>]
     </td>
     <td>
-      Neural Networks, Parts <a href="http://cs231n.github.io/neural-networks-1">1</a>, <a href="http://cs231n.github.io/neural-networks-2">2</a>, <a href="http://cs231n.github.io/neural-networks-3">3</a><br>
-	Suggested Readings:
-	<ol>
-	  <li><a href="http://research.microsoft.com/pubs/192769/tricks-2012.pdf">Stochastic Gradient Descent Tricks</a></li>		
-      	  <li><a href="http://yann.lecun.com/exdb/publis/pdf/lecun-98b.pdf">Efficient Backprop</a></li>
-      	  <li><a href="https://arxiv.org/pdf/1206.5533v2.pdf">Practical Recommendations for Gradient-based Training</a></li>
-	  <li><a href="https://www.nature.com/articles/nature14539">Deep Learning, Nature 2015</a></li>
-	</ol>
     </td>
     <td>
+      Midterm 1 [<a href="midterms/test1.pdf">test</a>]
     </td>
     <td>
     </td>
@@ -251,25 +243,18 @@
 
   <!-- Lecture 8 -->
   <tr>
-    <td>04/22</td>
+    <td>05/06</td>
     <td>
-      <b>Lecture 8: Training Neural Networks, part II</b> <br>
-      Backpropagation<br>
-      Update rules, hyperparameter tuning, learning rate scheduling, data augmentation<br>
-	[<a href="slides/2021/lecture_8.pdf">slides</a>]
-    </td>
-    <td>
-      <a href="http://cs231n.github.io/neural-networks-3">Neural Networks, Part 3</a><br>
-	Suggested Readings:
-	<ol>
-      	  <li><a href="https://ruder.io/optimizing-gradient-descent/">An Overview of Gradient Descent Algorithms</a></li>
-	  <li><a href="https://distill.pub/2017/momentum/">Why Momentum Really Works</a></li>
-	  <li><a href="https://arxiv.org/abs/1803.09820">A Disciplined Approach to Neural Network Hyper-Parameters</a></li>
-	</ol>
+      <b>Lecture 8: Stochastic Integral(Cont)</b> <br>
+      Connection between Ito and Stratonorwich Integral<br>
     </td>
     <td>
     </td>
     <td>
+      <a href="homeworks/hw7.pdf" target="_blank">homework7</a>
+    </td>
+    <td>
+      <b><font color="red">Due</font></b> May 14
     </td>
   </tr>
 
