--- a/schedule.html
+++ b/schedule.html
@@ -258,6 +258,19 @@
     </td>
   </tr>
 
+  <tr class="warning">
+    <td>05/07</td>
+    <td>
+      Course Project Released[<a href="project.html">Project</a>]
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+
   <!-- Discussion 4 -->
   <tr class='info'>
     <td>04/23</td>
