--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <h3>Assignments (20%)</h3>
   <p>See the <a href="assignments.html">Assignment</a> page for details regarding assignments, late days and collaboration policies.</p>
 
-  <h3>Midterms (40%, 20% each)</h3>
+  <h3>Midterm (40%)</h3>
   <p>Detailed information regarding the midterm see</p>
 
   <h3>Final Project (40%)</h3>
