--- a/schedule.html
+++ b/schedule.html
@@ -228,14 +228,16 @@
     </td>
   </tr>
 
-  <tr class="warning">
+  <!-- Midterm -->
+  <tr class="danger">
     <td>04/29</td>
     <td>
+      <b>Midterm (No Lecture)</b> <br>
     </td>
     <td>
     </td>
     <td>
-      Midterm 1 [<a href="midterms/test1.pdf">test</a>]
+      Midterm [<a href="midterms/test1.pdf">test</a>]
     </td>
     <td>
     </td>
@@ -342,24 +344,6 @@
     </td>
     <td>
       Assignment 2 <b><font color="red">due</font></b>
-    </td>
-  </tr>
-
-  <!-- Midterm -->
-  <tr class="danger">
-    <td>05/04</td>
-    <td>
-      <b>Midterm (No Lecture)</b> <br>
-    </td>
-    <td>
-      <i class="fa fa-clock-o"></i> 24 hours
-    </td>
-    <td>
-      Assignment 3 <b><font color="green">out</font></b><br>
-      [<a href="https://cs231n.github.io/assignments2021/assignment3/">handout</a>]
-      [<a href="https://cs231n.github.io/assignments/2021/assignment3_colab.zip">colab</a>]
-    </td>
-    <td>
     </td>
   </tr>
 
