--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Stanford University CS231n: Convolutional Neural Networks for Visual Recognition</title>
+  <title>MAT520 Project</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -33,7 +33,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand brand" href="index.html">CS231n Home</a>
+        <a class="navbar-brand brand" href="index.html">MAT520 Home</a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -45,9 +45,6 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html#coursework"><b>Coursework</b></a></li>
           <li><a href="schedule.html"><b>Schedule</b></a></li>
-          <li><a href="office_hours.html"><b>Office Hours</b></a></li>
-          <li><a href="https://canvas.stanford.edu/courses/135672/external_tools/3367"><b>Lecture Videos</b></a></li>
-          <li><a href="http://piazza.com/stanford/spring2021/cs231n"><b>Piazza</b></a></li>
         </ul>
       </div>
     </div>
@@ -55,14 +52,9 @@
 
   <!-- Header -->
   <div id="header" style="text-align:center">
-    <a href="http://svl.stanford.edu">
-      <img src="img/svl_logo.png" class="logo-left">
-    </a>
-    <a href="http://stanford.edu/">
-      <img src="img/stanfordlogo.jpg" class="logo-right">
-    </a>
-    <h1>CS231n: Convolutional Neural Networks for Visual Recognition</h1>
-    <h3>Stanford - Spring 2021</h3>
+    <h1>MAT520: Stochastic Differential Equation</h1>
+    <h3>Southwestern University of Finance and Economics</h3>
+    <h3>Spring 2021</h3>
     <div style="clear:both;"></div>
   </div>
 
