--- a/project.html
+++ b/project.html
@@ -62,7 +62,6 @@
 <div class="container sec">
   <h2>Final Project</h2>
   <ul>
-    <li><a href="project.html#dates">Important Dates</a></li>
     <li><a href="project.html#overview">Overview</a></li>
     <li><a href="project.html#collaboration">Collaboration Policy</a></li>
     <li><a href="project.html#late-policy">Late Policy</a></li>
@@ -74,64 +73,24 @@
 </div>
 </div>
 
-<div class="container sec" id="dates" style="margin-top:-50px">
-  <br>
-  <h2>Important Dates</h2>
-  Unless otherwise noted, all project items are due by 11:59 pm Pacific Time.<br><br>
-
-<table class="table">
-  <tr class="active">
-    <th>Deliverable</th><th>Weight</th><th>Due Date</th><th>Late Days</th>
-  </tr>
-
-<tbody>
-  <tr>
-    <td>Project Proposal</td>
-    <td>1%</td>
-    <td>April 19, 2021</td>
-    <td>Yes</td>
-  </tr>
-  <tr>
-    <td>Project Milestone</td>
-    <td>2%</td>
-    <td>May 10, 2021</td>
-    <td>Yes</td>
-  </tr>
-  <tr>
-    <td>Final Report</td>
-    <td>22%</td>
-    <td>June 3, 2021</td>
-    <td>No</td>
-  </tr>
-  <tr>
-    <td>Project Presentation</td>
-    <td>10%</td>
-    <td>June 4, 2021</td>
-    <td>No</td>
-  </tr>
-</tbody>
-</table>
-</div>
-
 <div class="container sec" id="overview" style="margin-top:-50px">
   <br>
   <h2>Overview</h2>
   <p>
     The Course Project is an opportunity for you to apply what you have learned in class to a
-    problem of your interest. Potential projects usually fall into these two tracks:
+    problem of your interest. I will include the papers that you need to read for the course research project together with the instructions.
+    You are welcome to choose your topic provided that it is related to (some topics of) this course and nodded by me, however, as you see, a self-chosen topic seems excessive once you check the topics.
   </p>
   <ul>
     <li>
-      <strong>Applications.</strong>
-      If you're coming to the class with a specific background and interests (e.g. biology,
-      engineering, physics), we'd love to see you apply ConvNets to problems related to your
-      particular domain of interest. Pick a real-world problem and apply ConvNets to solve it.
+      <strong>Agent-Based Modeling</strong>
+
     </li>
     <li>
-      <strong>Models.</strong>
-      You can build a new model (algorithm) with ConvNets, or a new variant of existing models,
-      and apply it to tackle vision tasks. This track might be more challenging, and sometimes
-      leads to a piece of publishable work.
+      <strong>Mean Field Game Teory.</strong>
+      The second topic is the mean-field game theory, its implication and development.
+
+      Note: i) for this topic, knowing some PDEs may help and PDE is an extremely important role in this case.  There are quite a few areas one can work on this topic and PDE is one of them.  This will be a "hot" topic in the coming future； ii） Approaches from the Paticle Model may be carried over here.
     </li>
   </ul>
   <p>
