--- a/schedule.html
+++ b/schedule.html
@@ -43,7 +43,7 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://cs231n.github.io/"><b>Course Notes</b></a></li>
+          <li><a href=""><b>Course Notes</b></a></li>
           <li><a href="index.html#coursework"><b>Coursework</b></a></li>
           <li><a href="schedule.html"><b>Schedule</b></a></li>
         </ul>
@@ -406,40 +406,40 @@
   <tr class="warning">
     <td>07/01</td>
     <td>
+      Project final presentation (Rehearsal 1)
     </td>
     <td>
     </td>
     <td>
     </td>
     <td>
-      Project final presentation (Rehearsal 1)<b><font color="red">Due</font></b>
     </td>
   </tr>
 
-
-  <tr class="warning">
-    <td>07/08</td>
-    <td>
-    </td>
-    <td>
-    </td>
-    <td>
-    </td>
-    <td>
-      Project final presentation (Rehearsal 2)<b><font color="red">Due</font></b>
-    </td>
-  </tr>
 
   <tr class="warning">
     <td>07/08</td>
     <td>
+      Project final presentation (Rehearsal 2)
     </td>
     <td>
     </td>
     <td>
     </td>
     <td>
-      Project final presentation (Formal)<b><font color="red">Due</font></b>
+    </td>
+  </tr>
+
+  <tr class="warning">
+    <td>07/15</td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+      Paper and presentation slides submission<b><font color="red">Due</font></b>
     </td>
   </tr>
 </table>
