--- a/schedule.html
+++ b/schedule.html
@@ -64,14 +64,7 @@
 <div class="container sec">
   <h2>Schedule</h2>
   <p>
-    As mentioned in the <a href="index.html#logistics"><b>Logistics</b></a> section, the course will be
-    taught virtually on Zoom for the entire duration of the quarter. Unless otherwise specified:
-    <ul>
-      <li><b>Lectures</b> will occur Tuesday/Thursday from 1:00-2:20PM Pacific Time. The zoom link is posted on <a href="https://canvas.stanford.edu/courses/135672">Canvas</a>.</li>
-      <li><b>Discussion</b> sections will (generally) occur Friday from 11:30-12:30PM Pacific Time. Check <a href="http://piazza.com/stanford/spring2021/cs231n">Piazza</a> for any exceptions.</li>
-    </ul>
-    Updated lecture slides will be posted here <u>shortly before</u> each lecture. For ease of reading, we've color-coded the lectures in white, discussion sections in
-    <span style="background-color:#6495ED">blue</span>, project-related deadlines in <span style="background-color:#F5EA7F">yellow</span> and the midterm in <span style="background-color:rgb(205, 92, 92)">red</span>.
+    Important events will be color coded here.
   </p>
 </div>
 </div>
