--- a/schedule.html
+++ b/schedule.html
@@ -426,6 +426,9 @@
   <tr class="warning">
     <td>07/15</td>
     <td>
+      <b>My Project</b>
+      [<a href="projects/sde_slides.pdf">Slides</a>]<br>
+      [<a href="projects/SDEpaper.pdf">Paper</a>]
     </td>
     <td>
     </td>
