--- a/schedule.html
+++ b/schedule.html
@@ -426,7 +426,7 @@
   <tr class="warning">
     <td>07/15</td>
     <td>
-      <b>My Project</b>
+      <b>My Project</b> <br>
       [<a href="projects/sde_slides.pdf">Slides</a>]<br>
       [<a href="projects/SDEpaper.pdf">Paper</a>]
     </td>
